# bevy_shadertoy_wgsl

./: .gitignore  Cargo.toml  LICENSE  LICENSES  README.md
assets/shaders/: image.frag  image.vert  image.wgsl  image2.wgsl  image_load.wgsl  texture_b.wgsl
assets/shaders/clouds/: buffer_a.wgsl  buffer_c.wgsl  buffer_d.wgsl  image.wgsl
assets/shaders/dancing_tree/: buffer_a.wgsl  buffer_c.wgsl  image.wgsl
assets/shaders/debugger/: buffer_a.wgsl  buffer_b.wgsl  buffer_d.wgsl  image.wgsl
assets/shaders/dry_ice/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  buffer_d.wgsl  image.wgsl
assets/shaders/fire/: image.wgsl
assets/shaders/fire2/: buffer_a.wgsl  buffer_d.wgsl  image.wgsl
assets/shaders/fluid/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  buffer_d.wgsl  image.wgsl
assets/shaders/interactive_fluid_simulation/: buffer_b.wgsl  image.wgsl
assets/shaders/liquid_toy/: buffer_a.wgsl  image.wgsl
examples/clouds/: clouds.rs  image.wgsl
examples/dancing_tree/: image.wgsl
examples/debugger/: common.wgsl  image.wgsl
examples/debugging/: buffer_a.wgsl
examples/dry_ice/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  buffer_d.wgsl  common.wgsl  dry_ice.rs  image.wgsl
examples/fire/: image.wgsl
examples/fire2/: buffer_a.wgsl  fire2.rs  image.wgsl
examples/fluid/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  buffer_d.wgsl  fluid.rs  image.wgsl
examples/liquid_toy/: buffer_a.wgsl  image.wgsl  liquid_toy.rs
examples/love_and_domination/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  buffer_d.wgsl  common.wgsl  image.wgsl
examples/minimal/: image.wgsl  minimal.rs
examples/mip_fluid/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  common.wgsl
examples/mixing_liquid/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  common.wgsl  image.wgsl
examples/molecular_dynamics/: buffer_a.wgsl  buffer_b.wgsl  common.wgsl  image.wgsl  molecular_dynamics.rs
examples/paint/: buffer_a.wgsl  buffer_b.wgsl  buffer_d.wgsl  image.wgsl  paint.rs
examples/paint2/: buffer_a.wgsl
examples/paint_streams/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  common.wgsl  image.wgsl  paint_streams.rs
examples/paint_streams2/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  common.wgsl  image.wgsl
examples/protean_clouds/: buffer_a.wgsl  image.wgsl  protean_clouds.rs
examples/seascape/: buffer_a.wgsl  image.wgsl  seascape.rs
examples/simpler_particles/: buffer_a.wgsl  buffer_b.wgsl  buffer_c.wgsl  buffer_d.wgsl  common.wgsl  fps.rs  image.wgsl  simpler_particles.rs
examples/soul/: buffer_a.wgsl  buffer_c.wgsl  image.wgsl  soul.rs
examples/sunset/: image.wgsl  sunset.rs
src/: bufferA.rs  common.wgsl  debugger.rs  image.wgsl  lib.rs  main.rs  main_backup.rs  textureA.rs  textureB.rs  textureC.rs  textureD.rs  texture_a.rs  texture_a.wgsl  texture_b.rs  texture_b.wgsl  texture_c.rs  texture_c.wgsl  texture_d.rs  texture_d.wgsl
src/templates/: buffer_a_template.wgsl  buffer_b_template.wgsl  buffer_c_template.wgsl  buffer_d_template.wgsl  common_prelude.wgsl  debugger.wgsl  image.wgsl  image_template.wgsl  texture_a.wgsl  texture_a_template.wgsl  texture_b.wgsl  texture_b_template.wgsl  texture_c_template.wgsl  texture_d.wgsl  texture_d_template.wgsl
(+64 files in other folders)
