[package]
name = "bevy_shadertoy_wgsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.5"
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
ron = "0.7"
bitflags = "1.3"
bevy_mod_debugdump = "0.3"
bevy = "0.7"

[[bin]]
edition = "2021"
name = "bevy_shadertoy_wgsl"
path = "src/main.rs"

# cargo build --release --target wasm32-unknown-unknown 
# wasm-bindgen --out-name wasm_shadertoy --out-dir wasm --target web target/wasm32-unknown-unknown/release/bevy_shadertoy_wgsl.wasm

[[example]]
name = "paint_streams"
path = "examples/paint_streams/paint_streams.rs"

[[example]]
name = "clouds"
path = "examples/clouds/clouds.rs"


[[example]]
name = "minimal"
path = "examples/minimal/minimal.rs"

[[example]]
name = "paint"
path = "examples/paint/paint.rs"

[[example]]
name = "protean_clouds"
path = "examples/protean_clouds/protean_clouds.rs"

[[example]]
name = "seascape"
path = "examples/seascape/seascape.rs"

[[example]]
name = "fluid"
path = "examples/fluid/fluid.rs"

[[example]]
name = "fire2"
path = "examples/fire2/fire2.rs"

[[example]]
name = "fire"
path = "examples/fire/fire.rs"

[[example]]
name = "dry_ice"
path = "examples/dry_ice/dry_ice.rs"